feat: fixed supertokens auth midlewares
