# docs/swagger.json
@@ -1,138 +1,95 @@
 {
-  "schemes": ["http"],
-  "swagger": "2.0",
-  "info": {
-    "description": "Provide Info About KSEB Web Server].",
-    "title": "KSEB Web Server",
-    "termsOfService": "http://swagger.io/terms/",
-    "contact": {
-      "name": "API Support",
-      "url": "http://www.swagger.io/support",
-      "email": "support@swagger.io"
+    "schemes": [
+        "http"
+    ],
+    "swagger": "2.0",
+    "info": {
+        "description": "Provide Info About KSEB Web Server].",
+        "title": "KSEB Web Server",
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {
+            "name": "API Support",
+            "url": "http://www.swagger.io/support",
+            "email": "support@swagger.io"
+        },
+        "license": {
+            "name": "MIT",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
+        "version": "1.0"
     },
-    "license": {
-      "name": "MIT",
-      "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-    },
-    "version": "1.0"
-  },
-  "host": "localhost:8000",
-  "basePath": "/api/v1",
-  "paths": {
-    "/issue": {
-      "post": {
-        "consumes": ["application/json"],
-        "produces": ["application/json"],
-        "summary": "Create Electricty Issue",
-        "parameters": [
-          {
-            "description": "Example Request Body",
-            "name": "reqBody",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/models.Issue"
+    "host": "localhost:8000",
+    "basePath": "/api/v1",
+    "paths": {
+        "/issue": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Returns A Single Issue With Post_id",
+                "responses": {}
+            },
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Create Electricty Issue",
+                "parameters": [
+                    {
+                        "description": "Example Request Body",
+                        "name": "reqBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Issue"
+                        }
+                    }
+                ],
+                "responses": {}
             }
-          }
-        ],
-        "responses": {}
-      }
-    }
-  },
-  "definitions": {
-    "gorm.DeletedAt": {
-      "type": "object",
-      "properties": {
-        "time": {
-          "type": "string"
         },
-        "valid": {
-          "description": "Valid is true if Time is not NULL",
-          "type": "boolean"
+        "/issue/:id": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Returns A Single Issue With id",
+                "responses": {}
+            }
+        },
+        "/officials": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Create KSEB Employee",
+                "parameters": [
+                    {
+                        "description": "Example Request Body",
+                        "name": "reqBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Officials"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
         }
-      }
     },
-    "models.Form": {
-      "type": "object",
-      "properties": {
-        "consumerno": {
-          "type": "integer"
+    "definitions": {
+        "models.Issue": {
+            "type": "object"
         },
-        "createdAt": {
-          "type": "string"
-        },
-        "deletedAt": {
-          "$ref": "#/definitions/gorm.DeletedAt"
-        },
-        "feeder": {
-          "type": "string"
-        },
-        "id": {
-          "type": "integer"
-        },
-        "issueID": {
-          "type": "integer"
-        },
-        "jobdescription": {
-          "type": "string"
-        },
-        "location": {
-          "type": "string"
-        },
-        "nooflabours": {
-          "type": "integer"
-        },
-        "postno": {
-          "type": "string"
-        },
-        "section": {
-          "type": "string"
-        },
-        "substation": {
-          "type": "string"
-        },
-        "transformer": {
-          "type": "string"
-        },
-        "typeofjob": {
-          "type": "string"
-        },
-        "updatedAt": {
-          "type": "string"
-        },
-        "voltage": {
-          "type": "integer"
+        "models.Officials": {
+            "type": "object"
         }
-      }
-    },
-    "models.Issue": {
-      "type": "object",
-      "properties": {
-        "createdAt": {
-          "type": "string"
-        },
-        "deletedAt": {
-          "$ref": "#/definitions/gorm.DeletedAt"
-        },
-        "desc": {
-          "type": "string"
-        },
-        "form": {
-          "$ref": "#/definitions/models.Form"
-        },
-        "id": {
-          "type": "integer"
-        },
-        "post_id": {
-          "type": "string"
-        },
-        "title": {
-          "type": "string"
-        },
-        "updatedAt": {
-          "type": "string"
-        }
-      }
     }
-  }
 }
