# router/router.go
@@ -7,10 +7,23 @@ import (
 	"github.com/sreehari2003/kseb/controller"
 	"github.com/sreehari2003/kseb/docs"
 	"github.com/sreehari2003/kseb/middlewares"
-
+	"github.com/supertokens/supertokens-golang/recipe/session"
+	"github.com/supertokens/supertokens-golang/recipe/session/sessmodels"
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
+
+// Wrap session.VerifySession to work with Gin
+func verifySession(options *sessmodels.VerifySessionOptions) gin.HandlerFunc {
+	return func(c *gin.Context) {
+		session.VerifySession(options, func(rw http.ResponseWriter, r *http.Request) {
+			c.Request = c.Request.WithContext(r.Context())
+			c.Next()
+		})(c.Writer, c.Request)
+		// we call Abort so that the next handler in the chain is not called, unless we call Next explicitly
+		c.Abort()
+	}
+}
 
 func CreateRoute(h controller.Handler) *gin.Engine {
 
@@ -36,20 +49,20 @@ func CreateRoute(h controller.Handler) *gin.Engine {
 
 	v1.POST("/issue", h.CreateIssue)
 	v1.GET("/issue", h.GetAllIssues)
-	v1.DELETE("/issue", h.DeleteAllIssue)
+	v1.DELETE("/issue", verifySession(nil), h.DeleteAllIssue)
 	v1.GET("/issue/:id", h.GetIssueByID)
 	v1.GET("/issue/search", h.SearchIssueByPostNumber)
 	// v1.g
 
 	// accesing controller by method
-	v1.POST("/officials", h.CreateOffical)
-	v1.GET("/officials", h.GetAllOfficials)
-	v1.GET("/officials/:id", h.GetOfficialsByID)
-	v1.GET("/officials/:id/forms", h.GetFormsByOfficialID)
+	v1.POST("/officials", verifySession(nil), h.CreateOffical)
+	v1.GET("/officials", verifySession(nil), h.GetOfficial)
+	v1.GET("/officials/:id/forms", verifySession(nil), h.GetFormsByOfficialID)
+	v1.GET("/officials/all", verifySession(nil), h.GetAllOfficials)
 	// accesing controller by method
-	v1.POST("/form", h.CreateForm)
-	v1.GET("/form", h.GetAllForm)
-	v1.GET("/form/:id", h.GetFormByID)
+	v1.POST("/form", verifySession(nil), h.CreateForm)
+	v1.GET("/form", verifySession(nil), h.GetAllForm)
+	v1.GET("/form/:id", verifySession(nil), h.GetFormByID)
 
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 
